IREER-157 Added batch commit